--- a/conexao/css/geral.css
+++ b/conexao/css/geral.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Ubuntu&display=swap');
 body{
-    background-color:rgba(77, 234, 255, 0.418);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    background-image: url(../img/images.png);
+    background-size: cover;
+
+    color: white;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 input{
@@ -10,5 +12,9 @@ input{
     border-right: 2px solid black;
 }
 table{
-    background-color: white;
+    background-color: gray;
 }
+a{
+    color: black;
+}
+
